--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@penguinmod/packager",
+  "name": "@electramod/packager",
   "version": "1.9.2",
-  "description": "Converts PenguinMod projects into HTML files, zip archives, or executable programs for Windows, macOS, and Linux.",
+  "description": "Converts ElectraMod projects into HTML files, zip archives, or executable programs for Windows, macOS, and Linux.",
   "main": "dist/packager.js",
   "scripts": {
     "start": "webpack serve --host 0.0.0.0 --port 5000 --disable-host-check",
@@ -17,18 +17,18 @@
     "prepublishOnly": "npm run test && npm run build-node-prod && node src/build/nodejs/update-readme.js node",
     "postpublish": "node src/build/nodejs/update-readme.js restore"
   },
-  "author": "PenguinMod",
-  "homepage": "https://github.com/PenguinMod/PenguinMod-Packager#readme",
+  "author": "ElectraMod",
+  "homepage": "https://github.com/ElectraMod/packager/#readme",
   "keywords": [
-    "penguinmod",
+    "electramod",
     "packager"
   ],
   "bugs": {
-    "url": "https://github.com/PenguinMod/PenguinMod-Packager/issues"
+    "url": "https://github.com/ElectraMod/packager/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PenguinMod/PenguinMod-Packager.git"
+    "url": "https://github.com/ElectraMod/packager.git"
   },
   "funding": "https://penguinmod.com/donate",
   "license": "Apache-2.0",
@@ -37,8 +37,10 @@
     "@turbowarp/json": "^0.1.1",
     "@turbowarp/sbdl": "^3.0.0",
     "cross-fetch": "^4.0.0",
+    "discord-rpc": "^4.0.1",
     "jszip": "^3.7.1",
-    "sha.js": "^2.4.11"
+    "sha.js": "^2.4.11",
+    "vercel": "^33.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
