--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "rimraf": "^2.7.1",
     "scratch-audio": "git+https://github.com/PenguinMod/PenguinMod-Audio.git#develop",
     "scratch-render": "git+https://github.com/PenguinMod/PenguinMod-Render.git#develop",
-    "scratch-render-fonts": "github:PenguinMod/penguinmod-render-fonts#master",
+    "scratch-render-fonts": "https://github.com/ElectraMod/scratch-render-fonts#master",
     "scratch-storage": "git+https://github.com/PenguinMod/PenguinMod-Storage.git#develop",
     "scratch-svg-renderer": "git+https://github.com/TurboWarp/scratch-svg-renderer.git#develop",
     "scratch-vm": "git+https://github.com/ElectraMod/scratch-vm.git#develop",
