--- a/electron-bin/package.json
+++ b/electron-bin/package.json
@@ -6,6 +6,8 @@
     "@electron/get": "^2.0.1",
     "@electron/universal": "^1.3.4",
     "archiver": "^5.3.1",
+    "discord": "^0.8.2",
+    "discord-rpc": "^4.0.1",
     "extract-zip": "^2.0.1",
     "rcedit": "^3.0.1",
     "rimraf": "^3.0.2"
